--- a/css/app.css
+++ b/css/app.css
@@ -2,7 +2,140 @@
   margin: 0;
   padding: 0;
 }
+a {
+  color: #000;
+}
+a,
+a:hover,
+a:active {
+  text-decoration: none !important;
+}
+ul {
+  list-style: none;
+}
+input,
+textarea,
+input:focus,
+textarea:focus {
+  outline: none;
+  border: none;
+}
 body {
   font-size: 12px;
 }
+.relative {
+  position: relative;
+}
+/* nav start */
+.container-fluid {
+  padding: 0;
+}
+.row {
+  margin: 0;
+}
+#nav {
+  width: 100%;
+  height: 44px;
+  background: #000;
+}
+#nav .menu,
+#nav .user {
+  height: 100%;
+}
+#nav .menu a,
+#nav .user a {
+  font-size: 14px;
+  color: #b3b3b3;
+}
+#nav a:hover,
+#nav a:active,
+#createRepo a:hover,
+#createRepo:active {
+  color: #fff;
+  background: #b3b3b3;
+  border-radius: 2px;
+}
+#createRepo a:hover,
+#createRepo a:active,
+#userSetting a:hover,
+#userSetting a:active {
+  border-radius: 0;
+}
+#nav .menu img {
+  width: 50px;
+  height: 100%;
+}
+#nav .menu ul {
+  width: 70%;
+  float: left;
+  overflow: hidden;
+}
+#nav .menu ul li a,
+#nav .user > ul > li > a {
+  padding: 0 12px;
+  height: 28px;
+  line-height: 28px;
+  margin-top: 9px;
+  margin-left: 12px;
+}
+#nav .user > ul > li > a {
+  padding: 0;
+}
+#nav .menu ul li a,
+#nav .user > ul > li {
+  float: left;
+}
+#nav .user > ul > li > a {
+  display: inline-block;
+  width: 120px;
+}
+#nav .user > ul > li {
+  height: 44px;
+}
+#nav .user > ul > li input {
+  width: 100%;
+  height: 28px;
+  margin-top: 8px;
+  padding: 0 5px;
+  border-radius: 2px;
+  background: #e7e7e7;
+  font-size: 14px;
+}
+#nav .user > ul > li input:focus {
+  background: #fff;
+}
+#createRepo,
+#userSetting {
+  width: 200px;
+  background: #000;
+  position: absolute;
+  top: 44px;
+  left: -122px;
+}
+#userSetting {
+  width: 120px;
+  left: 12px;
+}
+#createRepo ul li,
+#createRepo ul li a,
+#userSetting ul li,
+#userSetting ul li a {
+  width: 100%;
+}
+#createRepo ul li,
+#userSetting ul li {
+  height: 44px;
+}
+#createRepo a,
+#userSetting a {
+  display: inline-block;
+  width: 100%;
+  height: 44px;
+  line-height: 44px;
+  font-size: 14px;
+}
+#nav i {
+  margin: 0 5px 0 10px;
+}
+/* nav end*/
 /*# sourceMappingURL=app.css.map */
