--- a/less/app.less
+++ b/less/app.less
@@ -150,3 +150,22 @@ body {
 }
 
 /* nav end*/
+
+/* repo list start*/
+#repoList {
+
+}
+
+#repoList .filter-repo {
+	text-align: center;
+}
+
+#repoList .filter-repo input {
+	width: 80px;
+}
+
+#repoList .filter-repo label > i {
+	position: absolute;
+}
+/* repo list end*/
+
