--- a/css/app.css
+++ b/css/app.css
@@ -21,10 +21,29 @@ textarea:focus {
   border: none;
 }
 body {
-  font-size: 12px;
+  font-size: 14px;
+  font-family: Microsoft YaHei;
 }
 .relative {
   position: relative;
+}
+.col-orange {
+  color: #ff5400;
+}
+.col-gray {
+  color: #b3b3b3;
+}
+.col-skyblue {
+  color: skyblue;
+}
+.mar-tp-no {
+  margin-top: 0;
+}
+.mar-lt {
+  margin-left: 10px;
+}
+.over-hidden {
+  overflow: hidden;
 }
 /* nav start */
 .container-fluid {
@@ -36,6 +55,7 @@ body {
 #nav {
   width: 100%;
   height: 44px;
+  margin-bottom: 10;
   background: #000;
 }
 #nav .menu,
@@ -110,7 +130,7 @@ body {
   background: #000;
   position: absolute;
   top: 44px;
-  left: -122px;
+  left: -66px;
 }
 #userSetting {
   width: 120px;
@@ -141,12 +161,82 @@ body {
 /* repo list start*/
 #repoList .filter-repo {
   text-align: center;
+  height: 40px;
+  line-height: 40px;
+  font-size: 20px;
+  margin-top: 65px;
+  margin-bottom: 80px;
 }
 #repoList .filter-repo input {
-  width: 80px;
+  width: 500px;
+  margin-right: 10;
+  border: 1px solid #eaeaea;
+  border-radius: 24px 24px 24px 24px;
+  padding: 0 12px;
+  font-size: 14px;
 }
-#repoList .filter-repo label > i {
+#repoList .filter-repo .search {
   position: absolute;
+  right: 30px;
+  top: -3px;
+  padding: 5px;
+}
+#repoList .content {
+  width: 100%;
+  margin-left: 12px;
+}
+#repoList .media-repo {
+  margin-top: 40px;
+}
+#repoList .repo-left {
+  border-top: 1px solid #000;
+}
+#repoList .repo-left span {
+  display: inline-block;
+  width: 90%;
+  height: 40px;
+  line-height: 40px;
+  text-overflow: ellipsis;
+}
+#repoList .repo-left span:first-child {
+  border-bottom: 1px solid #b3b3b3;
+  height: 40px;
+  font-size: 16px;
+  color: #000;
+}
+#repoList .repo-body a {
+  display: inline-block;
+  width: 42%;
+  padding: 12px;
+  margin-bottom: 20px;
+  background: #eaeaea;
+  vertical-align: top;
+}
+#repoList .repo-body a:nth-child(2n) {
+  margin-left: 8%;
+}
+#repoList .repo-body h3 {
+  margin-top: 8px;
+  font-size: 20px;
+}
+#repoList .repo-body h5 {
+  font-size: 16px;
+}
+#repoList .star-fork {
+  font-size: 20px;
+  margin-top: 50px;
+  margin-bottom: 0;
+  position: relative;
+}
+#repoList .star-fork i {
+  font-size: 24px;
+}
+#repoList .star-fork i.fa-info-circle {
+  font-size: 18px;
+  position: absolute;
+  top: 8px;
+  right: -4px;
+  opacity: 0.5;
 }
 /* repo list end*/
 /*# sourceMappingURL=app.css.map */
