--- a/css/app.css
+++ b/css/app.css
@@ -41,6 +41,9 @@ body {
 .col-skyblue {
   color: skyblue;
 }
+.bg-brownness {
+  color: #c9caaa;
+}
 .mar-tp-no {
   margin-top: 0;
 }
@@ -63,7 +66,7 @@ body {
 #nav {
   width: 100%;
   height: 44px;
-  margin-bottom: 10;
+  margin-bottom: 10px;
   background: #000;
 }
 #nav .menu,
@@ -178,7 +181,7 @@ body {
 }
 #repoList .filter-repo input {
   width: 500px;
-  margin-right: 10;
+  margin-right: 10px;
   border: 1px solid #eaeaea;
   border-radius: 24px 24px 24px 24px;
   padding: 0 12px;
@@ -234,7 +237,7 @@ body {
 }
 #repoList .star-fork {
   font-size: 20px;
-  margin-top: 50px;
+  margin-top: 60px;
   margin-bottom: 0;
   position: relative;
 }
@@ -279,6 +282,9 @@ body {
   position: relative;
   left: -20px;
 }
+#newRepo li:first-child span {
+  background: #c9caaa;
+}
 #newRepo li:last-child span {
   top: 5px;
 }
@@ -286,8 +292,8 @@ body {
   font-size: 16px;
   font-weight: normal;
   display: inline-block;
-  width: calc(48%);
-  width: -webkit-calc(48%);
+  width: calc(100% - 52px);
+  width: -webkit-calc(100% - 52px);
 }
 #newRepo .base-info {
   background: rosybrown;
@@ -311,24 +317,53 @@ body {
   border: 1px solid #fff;
 }
 #newRepo .visible-type {
-  margin: 10px auto;
+  margin: 15px auto 25px;
   font-size: 16px;
 }
-#newRepo span {
+#newRepo .visible-type > span {
   display: inline-block;
-  width: 60px;
+  width: 65px;
+  color: #fff;
+}
+#newRepo .visible-type label {
+  color: #fff;
+  width: calc(95% - 65px);
+  width: -webkit-calc(95% - 65px);
+}
+#newRepo .visible-type input {
+  width: 18px;
+  height: 18px;
+  position: relative;
+  top: 5px;
+}
+#newRepo .visible-type input:active,
+#newRepo .visible-type input:focus {
+  outline: none;
+  border: none;
+}
+#newRepo .visible-type input:last-child {
+  margin-left: 10px;
 }
 #newRepo select {
-  width: calc(35%);
-  width: -webkit-calc(35%);
+  width: calc(95% - 60px);
+  width: -webkit-calc(95% - 60px);
+  padding: 12px;
+  color: #b3b3b3;
 }
-#newRepo button {
+#newRepo option {
+  padding: 12px;
+}
+#newRepo .btn-create {
   font-size: 16px;
-  width: 60px;
+  width: 70px;
   height: 40px;
   line-height: 40px;
   text-align: center;
-  border: 2px;
+  border-radius: 2px;
+  color: #fff;
+}
+#newRepo .btn-create:hover {
+  background: #ff5400;
 }
 /* repo create end*/
 /*# sourceMappingURL=app.css.map */
