--- a/css/app.css
+++ b/css/app.css
@@ -366,4 +366,69 @@ body {
   background: #ff5400;
 }
 /* repo create end*/
+/* org list start*/
+#orgList {
+  margin-top: 50px;
+}
+#orgList .title {
+  font-size: 16px;
+}
+#orgList .title button {
+  background: #fff;
+  color: #b3b3b3;
+  padding: 10px 20px;
+  border: 1px solid skyblue;
+  border-radius: 24px;
+}
+#orgList .title button:hover,
+#orgList .title button:focus,
+#orgList .title button:active {
+  color: #fff;
+  background: skyblue;
+}
+#orgList .media-org {
+  overflow: hidden;
+  border: 1px solid #d7d7d7;
+  border-radius: 16px;
+  margin-top: 40px;
+  width: 90%;
+  margin-left: 5%;
+}
+#orgList .org-left,
+#orgList .org-body {
+  float: left;
+  padding: 24px 12px;
+}
+#orgList .org-left {
+  width: 30%;
+  border: 1px solid #eaeaea;
+  text-align: center;
+}
+#orgList .org-body {
+  width: 70%;
+  margin-top: 20px;
+  text-align: center;
+  color: skyblue;
+}
+#orgList .org-body span {
+  font-size: 30px;
+}
+#orgList .org-body small {
+  color: #b3b3b3;
+}
+#orgList img {
+  width: 60px;
+  height: 60px;
+  max-width: 100%;
+  border: 1px solid #b3b3b3;
+  border-radius: 50%;
+  padding: 10px;
+}
+#orgList .org-left span {
+  display: block;
+  width: 100%;
+  margin-top: 15px;
+  font-size: 16px;
+}
+/* org list end*/
 /*# sourceMappingURL=app.css.map */
