--- a/less/app.less
+++ b/less/app.less
@@ -420,3 +420,78 @@ body {
 }
 /* repo create end*/
 
+/* org list start*/
+#orgList {
+	margin-top: @baseMargin+40px;
+}
+
+#orgList .title {
+	font-size: 16px;
+}
+
+#orgList .title button {
+	background: @white;
+	color: @gray;
+	padding: 10px 20px;
+	border: 1px solid @skyblue;
+	border-radius: 24px;
+}
+
+#orgList .title button:hover, #orgList .title button:focus, #orgList .title button:active {
+	color: @white;
+	background: @skyblue;
+}
+
+#orgList .media-org {
+	overflow: hidden;
+	border: 1px solid #d7d7d7;
+	border-radius: 16px;
+	margin-top: @baseMargin+30px;
+	width: 90%;
+	margin-left: 5%;
+}
+
+#orgList .org-left, #orgList .org-body {
+	float: left;
+	padding: 24px 12px;
+}
+
+#orgList .org-left {
+	width: 30%;
+	border: 1px solid #eaeaea;
+	text-align: center;
+}
+
+#orgList .org-body {
+	width: 70%;
+	margin-top: @baseMargin+10px;
+	text-align: center;
+	color: @skyblue;
+}
+
+#orgList .org-body span{
+	font-size: 30px;
+}
+
+#orgList .org-body small {
+	color: @gray;
+}
+
+#orgList img {
+	width: 60px;
+	height: 60px;
+	max-width: 100%;
+	border: 1px solid @gray;
+	border-radius: 50%;
+	padding: 10px;
+}
+
+#orgList .org-left span {
+	display: block;
+	width: 100%;
+	margin-top: @baseMargin+5px;
+	font-size: 16px;
+}
+
+// #orgList .org-body
+/* org list end*/
