--- a/templates/organization/list.html
+++ b/templates/organization/list.html
@@ -77,8 +77,10 @@
                 <span>org name</span>
               </a>
               <a href="javascript:void(0)" class="org-body">
-                <span>3575</span><br/>
-                <small>repo num</small>
+                <p><span>575</span><br/>
+                <small>team num</small></p>
+                <p><span>3575</span><br/>
+                <small>repo num</small></p>
               </a>          
             </div>      
           </div>
@@ -89,8 +91,10 @@
                 <span>org name</span>
               </a>
               <a href="javascript:void(0)" class="org-body">
-                <span>3575</span><br/>
-                <small>repo num</small>
+                <p><span>575</span><br/>
+                <small>team num</small></p>
+                <p><span>3575</span><br/>
+                <small>repo num</small></p>
               </a>          
             </div>      
           </div>
@@ -101,8 +105,10 @@
                 <span>org name</span>
               </a>
               <a href="javascript:void(0)" class="org-body">
-                <span>3575</span><br/>
-                <small>repo num</small>
+                <p><span>575</span><br/>
+                <small>team num</small></p>
+                <p><span>3575</span><br/>
+                <small>repo num</small></p>
               </a>          
             </div>      
           </div>
@@ -113,8 +119,10 @@
                 <span>org name</span>
               </a>
               <a href="javascript:void(0)" class="org-body">
-                <span>3575</span><br/>
-                <small>repo num</small>
+                <p><span>575</span><br/>
+                <small>team num</small></p>
+                <p><span>3575</span><br/>
+                <small>repo num</small></p>
               </a>          
             </div>      
           </div>
