--- a/templates/repository/createRepo.html
+++ b/templates/repository/createRepo.html
@@ -68,7 +68,7 @@
             <b>this is guide of create repo </b>
           </li>
         </ul>
-        <div class="col-xs-12 col-md-5 col-md-offset-2 base-info">
+        <div class="col-xs-12 col-md-5 col-md-offset-2 info">
           <p><input type="text" placeholder="name" /></p>
           <p><input type="text" placeholder="short descript" /></p>
           <textarea placeholder="full descript"></textarea>
