--- a/less/app.less
+++ b/less/app.less
@@ -78,7 +78,7 @@ body {
 #nav {
 	width: 100%;
 	height: 44px;
-	margin-bottom: @baseMargin;
+	// margin-bottom: @baseMargin;
 	background: @black;
 }
 
@@ -184,9 +184,9 @@ body {
 	margin: 0 5px 0 10px;
 }
 
-/* nav end*/
+/* nav end */
 
-/* repo list start*/
+/* repo list start */
 #repoList {
 	// margin-top: @baseMargin+50px;
 }
@@ -286,9 +286,9 @@ body {
 	right: -4px;
 	opacity: 0.5;
 }
-/* repo list end*/
+/* repo list end */
 
-/* repo create start*/
+/* repo create start */
 #newRepo {
 	margin-top: @baseMargin+50px;
 }
@@ -300,12 +300,13 @@ body {
 #newRepo li {
 	height: auto;
 	width: 100%;
-	padding-top: 50px;
+	padding-bottom: 50px;
 	border-left: 1px dashed #b3b3b3;
 }
 
-#newRepo li:first-child {
-	padding: 0;
+
+#newRepo li:last-child {
+	border: none;
 }
 
 #newRepo li span {
@@ -340,7 +341,7 @@ body {
 }
 
 #newRepo .info {
-	background: rosybrown;
+	background: gainsboro;
 	padding: 24px 20px;
 }
 
@@ -414,12 +415,13 @@ body {
 	text-align: center;
 	border-radius: @baseRadius;
 	color: @white;
+	background: @gray;
 }
 
 #newRepo .btn-create:hover {
-	background: #ff5400;
+	background: #c9caaa;
 }
-/* repo create end*/
+/* repo create end */
 
 /* repo detail start */ 
 #repoDetail {
@@ -508,9 +510,13 @@ body {
 #info .desc
 /* repo detail end */ 
 
-/* org list start*/
+/* org list start */
 #orgList, #repoDetail {
 	margin-top: @baseMargin+40px;
+}
+
+#orgList {
+	margin-top: @baseMargin+30px;
 }
 
 #orgList .title {
@@ -531,28 +537,30 @@ body {
 }
 
 #orgList .media-org {
-	overflow: hidden;
 	border: 1px solid #d7d7d7;
 	border-radius: 16px;
 	margin-top: @baseMargin+30px;
 	width: 90%;
 	margin-left: 5%;
+	padding: 24px 0;
 }
 
 #orgList .org-left, #orgList .org-body {
-	float: left;
-	padding: 24px 12px;
+	display: inline-block;
+	// padding: 24px 12px;
 }
 
 #orgList .org-left {
-	width: 30%;
-	border: 1px solid #eaeaea;
+	width: 35%;
+	padding: 20px 10px;
+	border-right: 1px solid #d7d7d7;
 	text-align: center;
+	vertical-align: super;
 }
 
 #orgList .org-body {
-	width: 70%;
-	margin-top: @baseMargin+10px;
+	width: e("calc(65% - 16px)");
+	width: e("-webkit-calc(65% - 16px)");
 	text-align: center;
 	color: @blue;
 }
@@ -581,4 +589,81 @@ body {
 	font-size: 16px;
 }
 
-/* org list end*/
+/* org list end */
+
+/* org create start */
+#createOrg {
+	padding-top: 60px;
+	// background: @white;
+	height: 100%;
+	width: 100%;
+}
+
+#createOrg .guide {
+	width: 37%;
+	font-size: 16px;
+}
+
+#createOrg .steps {
+	width: 80%;
+	margin: 0 auto;
+}
+
+#createOrg .step-nav {
+	height: 44px;
+	line-height: 44px;
+	width: 100%;
+	margin-top: 40px;
+	text-align: center;
+}
+
+#createOrg li {
+	width: 25%;
+	border-bottom: 1px solid @gray;
+	float: left;
+}
+
+#createOrg li span {
+	display: inline-block;
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	border-radius: 50%;
+	font-size: 16px;
+	text-align: center;
+	color: @white;
+	background: @gray;
+	position: relative;
+	top: 20px;
+}
+
+#createOrg li:first-child span {
+	background: #c9caaa;
+}
+
+#createOrg .create {
+	width: 80%;
+	margin: 60px auto 0;
+	padding: 12px 24px;
+	background: @white;
+}
+
+#createOrg .first-step input {
+	width: 100%;
+	height: 40px;
+	line-height: 40px;
+	margin: 12px 0;
+	padding: 0 12px;
+	font-size: 14px;
+	border-radius: 5px;
+	border: 1px solid #d7d7d7;
+}
+
+#createOrg .first-step .save {
+	font-size: 16px;
+	color: @white;
+	padding: 12px 20px;
+	border-radius: 5px;
+	background: #eaeaea;
+}
+/* org create end */
