--- a/css/app.css
+++ b/css/app.css
@@ -26,10 +26,6 @@ button:focus {
   outline: none;
   border: none;
 }
-body {
-  font-size: 12px;
-  background: #F0EFF5;
-}
 .relative {
   position: relative;
 }
@@ -51,19 +47,130 @@ body {
 .mar-lt {
   margin-left: 10px;
 }
+.mar-tb-twenty {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 .over-hidden {
   overflow: hidden;
 }
 .cursor-point {
   cursor: pointer;
 }
-/* nav start */
+.disp-no {
+  display: none;
+}
 .container-fluid {
   padding: 0;
 }
 .row {
   margin: 0;
 }
+body {
+  font-size: 12px;
+  background: #F0EFF5;
+}
+/* index start */
+#header {
+  overflow: hidden;
+  font-size: 14px;
+  padding: 15px 12px;
+  background: lightblue;
+}
+#header,
+#header .space {
+  color: #fff;
+}
+#header img {
+  width: 40px;
+  height: 40px;
+}
+.nav-rt .space {
+  margin-left: 10px;
+}
+.search {
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+.search input {
+  width: 40%;
+  color: #000;
+  padding: 6px 12px;
+  font-size: 12px;
+}
+.content-one {
+  overflow: hidden;
+  background: #fff;
+  padding: 40px;
+}
+.content-one .space {
+  display: block;
+  width: 100%;
+}
+.content-one .features {
+  width: 150px;
+  margin-right: 50px;
+}
+.content-one .character {
+  padding: 5px 12px;
+  background: lightblue;
+  color: #fff;
+}
+.content-one .title {
+  padding: 10px 0;
+}
+.content-two {
+  background: lightblue;
+  padding: 40px 0;
+  font-size: 0;
+  color: #fff;
+}
+.content-two .space {
+  display: inline-block;
+  font-size: 14px;
+  vertical-align: bottom;
+  width: 80%;
+  margin-left: 10%;
+}
+.content-two .font-big {
+  font-size: 16px;
+}
+.surface-carousel {
+  width: calc(100% - 200px);
+  width: -webkit-calc(100% - 200px);
+  height: 250px;
+  border: 1px solid #b3b3b3;
+}
+.content-three {
+  background: #fff;
+  padding: 40px 0;
+}
+.content-three .space {
+  width: 75%;
+  margin: 0 auto;
+}
+.content-three img {
+  width: calc((75% - 120px) / 3 );
+  width: -webkit-calc((75% - 120px) / 3 );
+  height: 200px;
+  margin-left: 30px;
+  border: 1px solid #b3b3b3;
+}
+#footer {
+  padding: 20px 12px;
+  background: lightblue;
+  color: #fff;
+  overflow: hidden;
+}
+#footer .space {
+  padding: 4px 14px;
+  border-radius: 24px;
+  background: #d7d7d7;
+  margin-left: 10px;
+  font-size: 14px;
+}
+/* index end */
+/* nav start */
 #nav {
   width: 100%;
   height: 44px;
@@ -517,9 +624,8 @@ body {
 }
 #createOrg .step-nav {
   height: 44px;
-  line-height: 44px;
   width: 100%;
-  margin-top: 40px;
+  margin-top: 20px;
   text-align: center;
 }
 #createOrg li {
