add edit info file of user setting

--- a/less/app.less
+++ b/less/app.less
@@ -795,3 +795,191 @@ body {
 	background: #eaeaea;
 }
 /* org create end */
+
+/* user setting */
+#userSet {
+	margin-top: 40px;
+}
+
+#userSet .content, #userSet .title {
+	width: 80%;
+	margin: 0 auto;
+}
+
+#userSet .title {
+	height: 44px;
+	line-height: 44px;
+	margin-bottom: 20px;
+	font-size: 16px;
+}
+
+#userSet .user-nav {
+	background: @white;
+	color: @white;
+	text-align: center;
+	border: none;
+}
+
+#userSet .user-nav li {
+	width: 33.3%;
+	border-left: 1px solid #eaeaea;
+}
+
+#userSet .user-nav li:first-child {
+	border: none;
+}
+
+#userSet .user-nav a {
+	width: 100%;
+	height: 44px;
+	line-height: 44px;
+	padding: 0;
+	margin: 0;
+	display: block;
+	border: none;
+	background: none;
+	font-size: 16px;
+}
+
+#userSet .user-nav>li.active, .user-nav>li.active:focus, .user-nav>li.active:hover {
+	background: @blue;
+}
+
+#userSet .user-nav>li.active>a, .user-nav>li.active>a:focus, .user-nav>li.active>a:hover {
+	color: @white;
+}
+
+#userSet .user-content {
+	margin-top: 20px;
+	padding: 20px 12px;
+	background: @white;
+	border-radius: @baseRadius;
+}
+
+#userSet .tips {
+	width: 40%;
+	padding: 20px 0;
+}
+
+#userSet .edit-info {
+	// overflow: hidden;
+}
+
+#userSet .visib {
+	width: 30%;
+	height: 80px;
+	line-height: 80px;
+	margin-right: 50px;
+	font-size: 16px;
+	border:1px solid #b3b3b3;
+}
+
+#userSet .visib input {
+	margin-left: 5%;
+	margin-right: 5px;
+}
+
+#userSet .email {
+	width: 65%;
+	padding: 20px 24px;
+	border: 1px solid #b3b3b3;
+}
+
+#userSet .email input {
+	width: 70%;
+	padding: 6px 12px;
+	font-size: 16px;
+	border: 1px solid #d7d7d7;
+	border-radius: 3px;
+	margin-right: 10px;
+}
+
+#userSet .add-email {
+	padding: 6px 12px;
+	border-radius: 3px;
+	background: @blue;
+	color: @white;
+	border-radius: 3px;
+	font-size: 16px;
+}
+
+#userSet .emails {
+	margin-top: 20px;
+	border: 1px solid #d7d7d7;
+	border-radius: 3px;
+}
+
+#userSet .emails li {
+	width: 100%;
+	padding: 15px 8px;
+	font-size: 0;
+}
+
+#userSet .emails li:nth-child(2n) {
+	background: #eaeaea;
+}
+
+#userSet .emails .addr,
+#userSet .emails .verified, 
+#userSet .emails .relation,
+#userSet .emails .delet {
+	display: inline-block;
+	font-size: 16px;
+}
+
+#userSet .emails .verified {
+	color: @blue;
+}
+
+#userSet .emails li:first-child .verified {
+	color: #000;
+}
+
+#userSet .emails .addr {
+	width: 50%;
+}
+
+#userSet .emails .verified, #userSet .emails .relation {
+	width: 22%;
+}
+
+#userSet .emails .delet {
+	width: 6%;
+}
+
+
+#userSet .password {
+	margin: 40px 0;
+	padding: 40px 0 20px;
+	background: #eaeaea;
+	text-align: center;
+	font-size: 14px;
+}
+
+#userSet .password li {
+	margin-bottom: 10px;
+}
+
+#userSet .password .space-text {
+	display: inline-block;
+	width: 140px;
+	padding: 6px 0;
+	margin-bottom: 20px;
+	text-align: left;
+}
+
+#userSet .password input {
+	width: 50%;
+	border-radius: 3px;
+	border: 1px solid #b3b3b3;
+	padding: 6px 12px;
+}
+
+#userSet .password button {
+	padding: 10px 30px;
+	background: @blue;
+	color: #fff;
+	font-size: 16px;
+	border-radius: 3px;
+}
+/* user end */
