add component router

--- a/less/app.less
+++ b/less/app.less
@@ -484,7 +484,7 @@ body {
 }
 
 #newRepo input::-webkit-input-placeholder, #newRepo textarea::-webkit-input-placeholder {
-	color: #ddd;
+	color: #fff;
 }
 
 #newRepo textarea {
