--- a/less/app.less
+++ b/less/app.less
@@ -342,7 +342,7 @@ body {
 #repoList .filter-repo .search {
 	position: absolute;
 	right: 30px;
-	top: -3px;
+	top: -41px;
 	padding: 5px;
 	cursor: pointer;
 }
@@ -453,8 +453,8 @@ body {
 	left: -20px;
 }
 
-#newRepo li:first-child span {
-	background: @brownness;
+.step-brown {
+	background: @brownness !important;
 }
 
 #newRepo li:last-child span {
@@ -763,10 +763,6 @@ body {
 	background: @gray;
 	position: relative;
 	top: 20px;
-}
-
-#createOrg li:first-child span {
-	background: #c9caaa;
 }
 
 #createOrg .create {
