--- a/templates/repository/repoCreate.html
+++ b/templates/repository/repoCreate.html
@@ -22,31 +22,31 @@
     <div class="row" id="newRepo">
       <ul class="col-xs-12 col-md-3 col-md-offset-1">
         <li>
-          <span>1</span>
+          <span [ngClass]=" step=== 1? 'step-brown' : '' ">1</span>
           <b>this is guide of create repo </b>
         </li>
         <li>
-          <span>2</span>
+          <span [ngClass]=" step=== 2? 'step-brown' : '' ">2</span>
           <b>this is guide of create repo </b>
         </li>
         <li>
-          <span>3</span>
+          <span [ngClass]=" step=== 3? 'step-brown' : '' ">3</span>
           <b>this is guide of create repo </b>
         </li>
         <li>
-          <span>4</span>
+          <span [ngClass]=" step=== 4? 'step-brown' : '' ">4</span>
           <b>this is guide of create repo </b>
         </li>
       </ul>
       <div class="col-xs-12 col-md-5 col-md-offset-2 info">
-        <p><input type="text" placeholder="name" /></p>
-        <p><input type="text" placeholder="short descript" /></p>
-        <textarea placeholder="full descript"></textarea>
+        <p><input type="text" placeholder="name"  (focus)="changeStep(1)"/></p>
+        <p><input type="text" placeholder="short descript"  (focus)="changeStep(2)"/></p>
+        <textarea placeholder="full descript" (focus)="changeStep(3)"></textarea>
         <div class="visible-type">
           <span>visibility:</span>
           <label>
-            <input type="radio" name="visibility" value="0"/>public
-            <input type="radio" name="visibility" value="1"/>private
+            <input type="radio" name="visibility" value="0" (focus)="changeStep(4)"/>public
+            <input type="radio" name="visibility" value="1" (focus)="changeStep(4)"/>private
           </label>
           <!-- <select>
             <option value="0">public</option>
