--- a/templates/repository/repoList.html
+++ b/templates/repository/repoList.html
@@ -10,13 +10,13 @@
     </span>
   </p>
   <div class="content">
-    <div class="row media-repo" *ngFor="let org of repoList">
+    <div class="row media-repo" *ngFor="let item of orgRepo">
       <p class="col-xs-4 col-md-2 col-md-offset-1 repo-left text-center">
-        <span>{{org.name}}</span><br/>
-        <span>{{org.bio}}</span>
+        <span>{{item.name}}</span><br/>
+        <span>{{item.bio}}</span>
       </p>
       <div class="col-xs-12 col-md-7 col-md-offset-2 repo-body">
-        <a href="###" *ngFor="let repo of org.children">
+       <!--  <a href="###" *ngIf="item.children&&item.children.length>0" *ngFor="let repo of item.children">
           <h3>{{repo.namespace}}/{{repo.repository}}</h3>
           <h5 class="col-gray">{{repo.description}}</h5>
           <p class="star-fork">
@@ -24,7 +24,7 @@
             <span class="disp-no"><i class="fa fa-code-fork mar-lt"></i> 100 </span>
             <i class="fa fa-info-circle"></i>
           </p>
-        </a>
+        </a> -->
       </div>
     </div>
   </div>
